--- a/vue-ele/static/css/reset.css
+++ b/vue-ele/static/css/reset.css
@@ -82,6 +82,8 @@ li {
 
 html, body {
     width: 100%;
+
+    font-family: 'PingFang SC','STHeitiSC-Light','Helvetica-Light',arial,sans-serif;
 }
 
 body {
