--- a/vue-ele/static/css/reset.css
+++ b/vue-ele/static/css/reset.css
@@ -90,3 +90,12 @@ body {
     -webkit-text-size-adjust: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+.clearfix::after {
+  display: block;
+  content: '';
+  height: 0;
+  line-height: 0;
+  overflow: hidden;
+  clear: both;
+}
